<resources>
    <string name="app_name">Mobile_Final_Proj</string>
    <string name="sign_in">Sign in</string>
    <string name="nba_cd">nba</string>
    <string name="ufc_cd">ufc</string>
    <string name="soc_cd">soccer</string>
    <string name="search_cd">search</string>
    <string name="home_cd">home</string>
    <string name="profile_cd">profile</string>
    <string name="about_cd">about</string>
    <string name="watch_cd">play</string>
    <string name="textview">TextView</string>
    <string name="searchbar">PlayerName</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_api_key">AIzaSyCPLWfsbqhABxGkdthSBs3YbiZYZvJXQUw</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="center">Center Screen</string>
    <string name="read_more">Read more</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="news">News</string>
    <string name="matches">Matches</string>
    <string name="login">Login</string>
    <string name="change_video">Change Video</string>
    <string name="user_email">User Email:</string>
    <string name="current_password">Current Password:</string>
    <string name="upload_image">Upload Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="show_hide_password">Show/Hide Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="vs">vs</string>
</resources>