<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/custom_background_color"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="293dp"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="SmartPlay | Sports"
            app:titleTextColor="@color/white" />

        <!-- Login Button -->
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangular_button"
            android:text="@string/sign_in" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="1dp"
        android:background="#1E1C1C"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <!-- UFC Button -->
        <ImageButton
            android:id="@+id/ufc_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/ufc_cd"
            android:scaleType="fitCenter"
            android:src="@drawable/ufc" />

        <!-- NBA Button -->
        <ImageButton
            android:id="@+id/nba_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/nba_cd"
            android:scaleType="fitCenter"
            android:src="@drawable/nba" />

        <!-- Soccer Button -->
        <ImageButton
            android:id="@+id/soc_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/soc_cd"
            android:scaleType="fitCenter"
            android:src="@drawable/soccer" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#1E1C1C"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/custom_background_color"
            android:contentDescription="@string/home_cd"
            android:scaleType="fitCenter"
            android:src="@drawable/home" />

        <!-- Search Button -->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/custom_background_color"
            android:contentDescription="@string/search_cd"
            android:scaleType="fitCenter"
            android:onClick="testSearch"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <!-- Play Button -->
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/custom_background_color"
            android:contentDescription="@string/watch_cd"
            app:srcCompat="@android:drawable/ic_media_play" />

        <!-- About Button -->
        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/custom_background_color"
            android:contentDescription="@string/about_cd"
            app:srcCompat="@android:drawable/ic_menu_help" />

        <!-- Profile Button -->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/custom_background_color"
            android:contentDescription="@string/profile_cd"
            android:scaleType="fitCenter"
            android:src="@drawable/profile" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>