<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Add your search tab content here -->
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_border"
        android:id="@+id/search_bar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_magnify" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/ic_magnify"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/input_search"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/enter_address_city_or_zip_code"
            android:imeOptions="actionSearch" />

    </RelativeLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/search_bar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/ic_gps"
        android:src="@drawable/ic_gps"/>

    <!-- Zoom out button -->
    <ImageView
        android:id="@+id/zoom_out_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_zoom_out"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/zoom_out"/>

    <!-- Zoom in button -->
    <ImageView
        android:id="@+id/zoom_in_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_zoom_in"
        android:layout_alignEnd="@id/zoom_out_button"
        android:layout_above="@id/zoom_out_button"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/zoom_in"/>

    <!-- Compass button -->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/search_bar"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_center_screen"
        android:id="@+id/center_button"
        android:contentDescription="@string/center"/>


</RelativeLayout>